--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h4>What I Do</h4>
-							<p>I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with Python and Ruby.</p>
+							<p>I spend my whole day experimenting with HTML, CSS, and JavaScript; dabbling with Python and Ruby.</p>
 							<div id="corner-br" class="corner"></div>
 							<div id="corner-bl" class="corner"></div>
 						</div>
