--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div data-mode="light" id="light-mode" class="theme-dot"></div>
 						<div data-mode="blue" id="blue-mode" class="theme-dot"></div>
 						<div data-mode="green" id="green-mode" class="theme-dot"></div>
-						<div data-mode="purple" id="purple-mode" class="theme-dot"></div>
+						<div data-mode="peach" id="peach-mode" class="theme-dot"></div>
 
 					</div>
 					<p id="settings-note">*Theme settings will be saved for <br>your next visit</p>
