--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class="left-column">
 					<img id="profile_pic" src="images/Raj.png">
-					<h5 style="text-align: center; line-height: 0;">Personalize theme</h5>
+					<h5 style="text-align: center; line-height: 0;">Switch Theme</h5>
 
 
 					<div id="theme-options-wrapper">
